[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/menus/WorldButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/StartGame.gd" type="Script" id=4]
[ext_resource path="res://scenes/menus/BonusLevels.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/CustomLevels.tscn" type="PackedScene" id=6]

[node name="StartGameMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_right = 528.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Start Game"
align = 1
valign = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 528.0
margin_bottom = 64.0

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 528.0
margin_bottom = 288.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 496.0
margin_bottom = 188.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="StoryMode" parent="Panel/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 464.0
margin_bottom = 70.0
focus_neighbour_bottom = NodePath("../HSplitContainer/BonusLevels")
size_flags_vertical = 3
text = "Story Mode"
clip_text = true

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 51.0
margin_right = 464.0
margin_bottom = 81.0

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 464.0
margin_bottom = 156.0
size_flags_vertical = 3

[node name="BonusLevels" parent="Panel/VBoxContainer/PanelContainer/VBoxContainer/HSplitContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 226.0
margin_bottom = 71.0
focus_neighbour_top = NodePath("../../StoryMode")
focus_neighbour_right = NodePath("../CustomLevels")
focus_neighbour_bottom = NodePath("../../../../Back")
size_flags_horizontal = 3
text = "Bonus Levels"
clip_text = true
script = null

[node name="CustomLevels" parent="Panel/VBoxContainer/PanelContainer/VBoxContainer/HSplitContainer" instance=ExtResource( 3 )]
margin_left = 238.0
margin_top = 0.0
margin_right = 464.0
margin_bottom = 71.0
focus_neighbour_left = NodePath("../BonusLevels")
focus_neighbour_top = NodePath("../../StoryMode")
focus_neighbour_bottom = NodePath("../../../../Back")
size_flags_horizontal = 3
text = "Custom Levels"
clip_text = true
script = null

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 292.0
margin_right = 528.0
margin_bottom = 322.0

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
margin_top = 326.0
margin_right = 528.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 42 )
focus_neighbour_top = NodePath("../PanelContainer/VBoxContainer/HSplitContainer/BonusLevels")
text = "Back"

[node name="BonusLevelsMenu" parent="." instance=ExtResource( 5 )]

[node name="CustomLevelsMenu" parent="." instance=ExtResource( 6 )]

[connection signal="about_to_show" from="." to="." method="_on_StartGameMenu_about_to_show"]
[connection signal="focus_entered" from="Panel/VBoxContainer/PanelContainer/VBoxContainer/HSplitContainer/BonusLevels" to="." method="_on_BonusLevels_focus_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/PanelContainer/VBoxContainer/HSplitContainer/BonusLevels" to="." method="_on_BonusLevels_pressed"]
[connection signal="focus_entered" from="Panel/VBoxContainer/PanelContainer/VBoxContainer/HSplitContainer/CustomLevels" to="." method="_on_CustomLevels_focus_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/PanelContainer/VBoxContainer/HSplitContainer/CustomLevels" to="." method="_on_CustomLevels_pressed"]
[connection signal="focus_entered" from="Panel/VBoxContainer/Back" to="." method="_on_Back_focus_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="popup_hide" from="BonusLevelsMenu" to="." method="_on_BonusLevelsMenu_popup_hide"]
